data/derived/fa15/progs/unify/prog1611.ml.out
Characters 58-60:
  if Array.length xs > 0 then List.hd xs + sumList xs;;
                                      ^^
Error: This expression has type 'a array
       but an expression was expected of type 'b list
